--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
     "bulma": "^0.9.4",
+    "sass": "^1.58.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -21,9 +22,7 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
-    "node-sass": "^8.0.0",
     "prettier": "^2.8.4",
-    "sass-loader": "^13.2.0",
     "vite": "^4.1.4"
   }
 }
